base app along with working accounts system

--- a/src/UI/styles/abstracts/_utils.scss
+++ b/src/UI/styles/abstracts/_utils.scss
@@ -1,7 +1,9 @@
 .wrapper {
-  width: 100%;
+  width: 90%;
   max-width: max(90rem, 75%);
   margin: auto;
+  height: 100%;
+  // backdrop-filter: blur(25px);
 
   // background-color: rgb(105, 105, 105);
   padding: clamp(1rem, 5vw, 3rem);
@@ -16,7 +18,7 @@
     background-color: rgb(0, 247, 255);
   }
   @include desktop {
-    background-color: rgb(204, 0, 255);
+    // background-color: rgba(255, 255, 255, 0.1);
   }
 }
 
