--- a/src/UI/styles/abstracts/_variables.scss
+++ b/src/UI/styles/abstracts/_variables.scss
@@ -1,1 +1,10 @@
 $color-primary: blue;
+
+$font-tektur: "Tektur", sans-serif;
+$font-montserrat: "Montserrat Alternates", sans-serif;
+$font-orbitron: "Orbitron", sans-serif;
+$font-raleway: "Raleway", sans-serif;
+$font-righteous: "Righteous", sans-serif;
+$font-audiowide: "Audiowide", sans-serif;
+$font-roboto: "Roboto", sans-serif;
+$font-oswald: "Oswald", sans-serif;
