--- a/src/UI/styles/styles.scss
+++ b/src/UI/styles/styles.scss
@@ -3,10 +3,12 @@
 @import "abstracts/utils";
 // @import "abstracts/animations";
 // @import "abstracts/functions";
-// @import "abstracts/mixins";
-// @import "abstracts/typography";
+@import "abstracts/mixins";
+@import "abstracts/typography";
 
 @import "base/reset";
+@import "base/btn";
+@import "base/scrollbar";
 
 // @import "components";
 
