--- a/src/UI/components/_manifest.scss
+++ b/src/UI/components/_manifest.scss
@@ -1,1 +1,7 @@
-// @import ".";
+@import "./LoginForm/login_form";
+@import "./RegisterForm/register_form";
+@import "./Loader/loader";
+@import "./NavBar/navbar";
+@import "./CreditCard/credit_card";
+@import "./UpdateForm/update_form";
+@import "./Timer/timer";
