--- a/src/UI/styles/base/_reset.scss
+++ b/src/UI/styles/base/_reset.scss
@@ -10,10 +10,13 @@ body {
   box-sizing: border-box;
   font-size: 1.6rem;
   font-family: sans-serif;
+  width: 100%;
+  height: 100vh;
 }
 
 html {
   font-size: 62.5%;
+  overflow: hidden;
 }
 
 ol,
@@ -30,4 +33,167 @@ img {
   height: 100%;
   object-fit: cover;
   object-position: center;
+}
+
+#root {
+  inset: 0 0 0 0;
+  position: fixed;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  // overflow-y: scroll;
+}
+
+// Starts Background
+.stars {
+  background-image: url("/src/assets/images/stars.jpg");
+  background-size: contain;
+  // background-position: center;
+  position: relative;
+  overflow: hidden;
+
+  &::before {
+    content: " ";
+    position: absolute;
+    width: 120%;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    top: 50%;
+    left: -30%;
+    transform: rotate(20deg);
+    background-image: url("/src/assets/images/earth_texture.jpg");
+    background-repeat: repeat;
+    background-blend-mode: hard-light;
+    background-size: cover;
+    animation: planetRotate 96s linear infinite;
+    $color: rgba(0, 7, 71, 0.95);
+    box-shadow: 0 0 0 0vw rgba(255, 255, 255, 0.02), 0 0 1vw $color,
+      0 0 3vw $color, 0 0 5vw $color, 0 0 8vw $color, 0 0 10vw $color,
+      inset 0 0 1vw $color, inset 0 0 2vw $color;
+    z-index: 2;
+  }
+
+  &__star {
+    position: absolute;
+    width: 7px;
+    display: block;
+    aspect-ratio: 1;
+    // height: 5px;
+    background-color: rgb(255, 255, 255);
+    top: 50%;
+    // left: 50%;
+    border-radius: 50%;
+    box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.1),
+      0 0 0 8px rgba(255, 255, 255, 0.1), 0 0 20px rgba(255, 255, 255, 1);
+    animation: starAnimation 5s linear infinite;
+    transform: rotate(315deg);
+
+    &::before {
+      content: " ";
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 20vw;
+      max-width: 30rem;
+      height: 2px;
+      background-image: linear-gradient(to right, white, transparent);
+    }
+
+    &:nth-child(1) {
+      top: 0%;
+      right: 89%;
+      animation-delay: 0;
+      animation-duration: 2s;
+      z-index: 1;
+    }
+    &:nth-child(2) {
+      top: 0%;
+      right: 65%;
+      animation-delay: 0.5s;
+      animation-duration: 4s;
+      z-index: 3;
+    }
+    &:nth-child(3) {
+      top: 10%;
+      right: 43%;
+      animation-delay: 0.35;
+      animation-duration: 3s;
+      z-index: 1;
+    }
+    &:nth-child(4) {
+      top: -10%;
+      right: 50%;
+      animation-delay: 0;
+      animation-duration: 6s;
+      z-index: 3;
+    }
+    &:nth-child(5) {
+      top: 5%;
+      right: 10%;
+      animation-delay: 0.43s;
+      animation-duration: 2.5s;
+      z-index: 1;
+    }
+    &:nth-child(6) {
+      top: 0%;
+      right: 60%;
+      animation-delay: 0.21s;
+      animation-duration: 4.9s;
+      z-index: 3;
+    }
+    &:nth-child(7) {
+      top: 50%;
+      right: 5%;
+      animation-delay: 0.75s;
+      animation-duration: 7s;
+      z-index: 1;
+    }
+    &:nth-child(8) {
+      top: 21%;
+      right: 74%;
+      animation-delay: 0.39s;
+      animation-duration: 3.8s;
+      z-index: 3;
+    }
+    &:nth-child(9) {
+      top: 50%;
+      right: -10%;
+      animation-delay: 0;
+      animation-duration: 6s;
+      z-index: 1;
+    }
+    &:nth-child(10) {
+      top: 5%;
+      right: 25%;
+      animation-delay: 0.56s;
+      animation-duration: 4s;
+      z-index: 3;
+    }
+  }
+}
+
+@keyframes starAnimation {
+  0% {
+    transform: rotate(315deg) translateX(0);
+    opacity: 1;
+  }
+  30% {
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(315deg) translateX(-1000px);
+    opacity: 0;
+  }
+}
+@keyframes planetRotate {
+  0% {
+    background-position: 0%;
+  }
+  100% {
+    background-position: 200%;
+    // transform: rotate(315deg) translateX(-1000px);
+    // opacity: 0;
+  }
 }
