the entire site is working save for passwords

--- a/src/UI/pages/_manifest.scss
+++ b/src/UI/pages/_manifest.scss
@@ -1,3 +1,4 @@
 @import "./HomePage/homepage";
 @import "./DashboardPage/dashboard_page";
 @import "./LogOutPage/logout_page";
+@import "./SwitchPage/switch_page";
