Responsive home and dashboard pages

--- a/src/UI/components/CreditCard/_credit_card.scss
+++ b/src/UI/components/CreditCard/_credit_card.scss
@@ -1,8 +1,7 @@
 .creditcard {
   width: 100%;
   aspect-ratio: 3.5/2;
-  height: fit-content;
-  //   background-color: red;
+  // height: fit-content;
   border-radius: 1rem;
   $num: 12;
   $width: 32%;
@@ -60,13 +59,10 @@
 
   &__webname {
     width: fit-content;
-    // left: 1rem;
-    // top: 1rem;
     display: flex;
-    gap: 1.5rem;
+    gap: 1rem;
     align-items: center;
-
-    // background-color: aqua;
+    color: rgb(188, 219, 255);
   }
 
   &__logo {
@@ -83,11 +79,15 @@
     font-size: 2rem;
     letter-spacing: 0.2rem;
     width: fit-content;
+
+    @include screenXS {
+      font-size: 1.6rem;
+    }
   }
 
   &__text {
+    color: rgb(188, 219, 255);
     font-family: $font-tektur;
-    // font-family: $font-montserrat;
     font-weight: 500;
   }
 
@@ -96,6 +96,27 @@
     letter-spacing: 2px;
     word-spacing: 1rem;
     text-align: center;
+    color: white;
+
+    @include screenXS {
+      font-size: 1.6rem;
+      word-spacing: 0rem;
+    }
+    @include screenS {
+      font-size: clamp(1.5rem, 5.5vw, 2.5rem);
+      word-spacing: 0rem;
+    }
+    @include screenM {
+      font-size: clamp(1.5rem, 5.5vw, 2.5rem);
+    }
+    @include screenL {
+      font-size: clamp(1.6rem, 2vw, 2rem);
+      word-spacing: 0rem;
+    }
+    @include screenXL {
+      font-size: clamp(1.6rem, 1.5vw, 3.5rem);
+      word-spacing: 1rem;
+    }
   }
 
   &__dates {
@@ -103,17 +124,18 @@
     display: flex;
     flex-direction: column;
     font-size: 1.4rem;
-    // justify-content: space-evenly;
-    //   letter-spacing: 2px;
-    //   word-spacing: 1rem;
     padding: 1rem;
-    //   text-align: center;
   }
 
   &__date {
     font-size: 1.2rem;
     width: 100%;
-
+    @include screenM {
+      font-size: clamp(1.2rem, 5.5vw, 1.8rem);
+    }
+    @include screenXL {
+      font-size: clamp(1rem, 1vw, 2rem);
+    }
     &:nth-child(1) {
       text-align: left;
     }
@@ -126,10 +148,14 @@
     padding: 0rem 1rem;
     width: 100%;
     font-size: 1.8rem;
-    // background-color: aliceblue;
     overflow: hidden;
-    // overflow-wrap: break-word;
-    // text-overflow: ellipsis;
     text-wrap: nowrap;
+    color: white;
+    @include screenM {
+      font-size: clamp(1.5rem, 6vw, 2.5rem);
+    }
+    @include screenXL {
+      font-size: clamp(1.6rem, 1.5vw, 3rem);
+    }
   }
 }
