--- a/src/UI/styles/abstracts/_variables.scss
+++ b/src/UI/styles/abstracts/_variables.scss
@@ -8,3 +8,4 @@ $font-righteous: "Righteous", sans-serif;
 $font-audiowide: "Audiowide", sans-serif;
 $font-roboto: "Roboto", sans-serif;
 $font-oswald: "Oswald", sans-serif;
+$font-black-ops: "Black Ops One", system-ui;
