--- a/src/UI/styles/base/_btn.scss
+++ b/src/UI/styles/base/_btn.scss
@@ -1,9 +1,7 @@
 .btn {
   cursor: pointer;
-  font-family: $font-righteous;
-  //   font-family: $font-raleway;
-  //   font-family: $font-tektur;
-  font-size: 1.8rem;
+  font-family: $font-black-ops;
+  font-size: 1.6rem;
   font-weight: 400;
   letter-spacing: 3px;
   text-transform: capitalize;
@@ -19,6 +17,13 @@
   transition: 0.2s ease-in-out;
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
+
+  @include screenXS {
+    padding: 1.5rem 2rem;
+  }
+  @include screenS {
+    padding: 1.5rem 2rem;
+  }
 
   &--focus {
     background-image: linear-gradient(
