--- a/src/UI/pages/DashboardPage/_dashboard_page.scss
+++ b/src/UI/pages/DashboardPage/_dashboard_page.scss
@@ -1,35 +1,73 @@
 .dashboard {
-  //   display: flex;
-  //   flex-direction: row;
-  //   align-items: center;
+  width: 100%;
   display: grid;
   grid-template-columns: 4fr 3fr;
-  grid-template-rows: 1fr 3fr;
-  //   display: flex;
-  //   flex-direction: row;
-  //   flex-wrap: wrap;
+  // grid-template-rows: 1fr 3fr;
   gap: 2rem;
   height: 100%;
   overflow-y: scroll;
-  //   align-content: stretch;
+
+  @include screenXS {
+    grid-template-columns: 1fr;
+  }
+  @include screenS {
+    grid-template-columns: 1fr;
+  }
+  @include screenM {
+    grid-template-columns: 1fr;
+  }
 
   & > * {
-    // background-color: aqua;
-    // flex-grow: 1;
+    width: 100%;
     padding: 1.5rem;
     border-radius: 1rem;
     @include glassmorph(white, 0.1, 10px);
   }
 
+  &__card {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 1rem;
+    height: 100%;
+    width: 100%;
+
+    @include screenXS {
+      grid-template-columns: 1fr;
+    }
+    @include screenS {
+      grid-template-columns: 1fr;
+    }
+
+    &__stats {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      font-size: 1.4rem;
+      $color: rgb(43, 255, 0);
+      & > p {
+        color: $color;
+        padding: 0.5rem 1rem 0.5rem 1rem;
+        border-bottom: 1px solid $color;
+      }
+      & > span {
+        color: $color;
+        padding: 0.5rem 1rem 0.5rem 1rem;
+      }
+    }
+  }
+
   &__creditcard {
     position: relative;
-    width: 65%;
+    width: 100%;
     height: fit-content;
-    overflow: hidden;
+
+    @include screenXS {
+      width: 100%;
+    }
 
     &__btn {
       position: absolute;
-      width: 7%;
+      width: clamp(1rem, 10%, 2rem);
       aspect-ratio: 1;
       top: 0;
       right: 0;
@@ -44,31 +82,36 @@
       }
     }
   }
-  &__card {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 1rem;
-    height: 100%;
-    width: 100%;
-
-    &__stats {
-      padding: 1rem;
-      height: 100%;
-    }
-  }
 
   &__stats {
     width: 100%;
     height: 100%;
     aspect-ratio: 3.5/2;
+    overflow: hidden;
+
+    @include screenXS {
+      display: none;
+    }
+    @include screenS {
+      display: none;
+    }
+    @include screenM {
+      display: none;
+    }
   }
   &__apps {
     grid-column: 1/3;
     width: 100%;
 
-    // height: 50rem;
-    // align-self: stretch;
+    @include screenXS {
+      grid-column: unset;
+    }
+    @include screenS {
+      grid-column: unset;
+    }
+    @include screenM {
+      grid-column: unset;
+    }
   }
 
   &__update {
