--- a/src/UI/pages/DashboardPage/_dashboard_page.scss
+++ b/src/UI/pages/DashboardPage/_dashboard_page.scss
@@ -126,5 +126,14 @@
     justify-content: center;
     align-items: center;
     backdrop-filter: blur(10px);
+
+    &__btn {
+      position: fixed;
+      top: 0;
+      left: 0;
+      // padding: 1rem;
+      width: clamp(3rem, 10vw, 5rem);
+      aspect-ratio: 1;
+    }
   }
 }
