--- a/src/UI/components/NavBar/_navbar.scss
+++ b/src/UI/components/NavBar/_navbar.scss
@@ -8,8 +8,8 @@
   border-radius: 50% 0% 50% 70%;
   transition: 0.5s ease-out;
 
-  background-color: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(10px);
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(20px);
   overflow: hidden;
 }
 .navbar {
@@ -32,17 +32,22 @@
     transform: translate(50%, -50%);
     width: 90%;
     // border: 2px solid red;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
   &__list {
-    // border: 2px solid rgb(68, 0, 255);
-    width: 100%;
+    max-width: 30rem;
+    width: 90%;
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    align-items: center;
+    gap: 0.75rem;
     // height: ;
     &__item {
       height: fit-content;
       width: 100%;
+      // border: 2px solid rgb(68, 0, 255);
     }
 
     &__link {
@@ -50,22 +55,43 @@
       padding: 7px;
       text-align: center;
       width: 100%;
-      //   background-color: aqua;
+      position: relative;
+      color: white;
+      // background-color: aqua;
       background-image: linear-gradient(
         to right,
         transparent 50%,
         aqua,
         transparent 50%
       );
-      transition: 0.5s linear;
+      transition: 0.2s linear;
 
-      &:hover {
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 0%;
+        height: 100%;
+        filter: blur(2px);
+        // background-color: azure;
+        transition: 0.2s ease-in-out;
         background-image: linear-gradient(
           to right,
-          transparent 35%,
-          aqua 50% 50%,
-          transparent 65%
+          transparent,
+          rgb(255, 255, 255),
+          transparent
         );
+        z-index: -1;
+      }
+
+      &:hover {
+        color: black;
+        &::before {
+          // background-color: aqua;
+          width: 100%;
+        }
       }
     }
   }
