--- a/src/UI/components/NavBar/_navbar.scss
+++ b/src/UI/components/NavBar/_navbar.scss
@@ -1,49 +1,50 @@
-.navbar__container {
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: clamp(3rem, 10%, 5rem);
-  aspect-ratio: 1;
-  z-index: 100;
-  border-radius: 50% 0% 50% 70%;
-  transition: 0.5s ease-out;
-
-  background-color: rgba(0, 0, 0, 0.6);
-  backdrop-filter: blur(20px);
-  overflow: hidden;
-}
 .navbar {
   &__btn {
+    position: fixed;
     top: 0;
-    position: absolute;
     right: 0;
-    width: 100%;
-    max-width: 6rem;
+    width: 6rem;
     aspect-ratio: 1;
     background-color: crimson;
     border-radius: 50% 0% 50% 50%;
-    border-radius: 40% 0% 40% 70%;
+    border-radius: 30% 0% 30% 60%;
+    z-index: 101;
   }
 
   &__nav {
-    position: absolute;
-    top: 50%;
-    right: 50%;
-    transform: translate(50%, -50%);
-    width: 90%;
-    // border: 2px solid red;
+    position: fixed;
+    top: 0%;
+    right: 0%;
+    width: 0rem;
+    height: 0rem;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
+    transition: 0.3s ease-in-out;
+    z-index: 100;
+    // background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(20px);
+    overflow: hidden;
+
+    &--open {
+      width: min(100%, 40rem);
+      border-radius: 0rem;
+      height: 100%;
+    }
+    &--close {
+      width: 0rem;
+      height: 0rem;
+      border-radius: 50%;
+    }
   }
   &__list {
-    max-width: 30rem;
     width: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 0.75rem;
-    // height: ;
+
     &__item {
       height: fit-content;
       width: 100%;
@@ -52,7 +53,7 @@
 
     &__link {
       display: block;
-      padding: 7px;
+      padding: 0.8rem;
       text-align: center;
       width: 100%;
       position: relative;
@@ -75,12 +76,11 @@
         width: 0%;
         height: 100%;
         filter: blur(2px);
-        // background-color: azure;
-        transition: 0.2s ease-in-out;
+        transition: 0.3s ease-in-out;
         background-image: linear-gradient(
           to right,
           transparent,
-          rgb(255, 255, 255),
+          rgba(255, 255, 255, 0.6),
           transparent
         );
         z-index: -1;
@@ -88,8 +88,8 @@
 
       &:hover {
         color: black;
+        font-weight: bold;
         &::before {
-          // background-color: aqua;
           width: 100%;
         }
       }
