--- a/src/UI/pages/DashboardPage/_dashboard_page.scss
+++ b/src/UI/pages/DashboardPage/_dashboard_page.scss
@@ -1,9 +1,9 @@
 .dashboard {
   width: 100%;
   display: grid;
-  grid-template-columns: 4fr 3fr;
+  grid-template-columns: 36% 64%;
   // grid-template-rows: 1fr 3fr;
-  gap: 2rem;
+  // gap: 2rem;
   height: 100%;
   overflow-y: scroll;
 
@@ -24,35 +24,35 @@
     @include glassmorph(white, 0.1, 10px);
   }
 
-  &__card {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
+  &__left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     gap: 1rem;
-    height: 100%;
+    // height: 100%;
+    // width: 100%;
+
+    // @include screenXS {
+    //   grid-template-columns: 1fr;
+    // }
+    // @include screenS {
+    //   grid-template-columns: 1fr;
+    // }
+  }
+  &__stats {
+    display: flex;
+    flex-direction: column;
     width: 100%;
-
-    @include screenXS {
-      grid-template-columns: 1fr;
+    font-size: 1.4rem;
+    $color: rgb(43, 255, 0);
+    & > p {
+      color: $color;
+      padding: 0.5rem 1rem 0.5rem 1rem;
+      border-bottom: 1px solid $color;
     }
-    @include screenS {
-      grid-template-columns: 1fr;
-    }
-
-    &__stats {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      font-size: 1.4rem;
-      $color: rgb(43, 255, 0);
-      & > p {
-        color: $color;
-        padding: 0.5rem 1rem 0.5rem 1rem;
-        border-bottom: 1px solid $color;
-      }
-      & > span {
-        color: $color;
-        padding: 0.5rem 1rem 0.5rem 1rem;
-      }
+    & > span {
+      color: $color;
+      padding: 0.5rem 1rem 0.5rem 1rem;
     }
   }
 
@@ -99,8 +99,9 @@
       display: none;
     }
   }
+
   &__apps {
-    grid-column: 1/3;
+    // grid-column: 1/3;
     width: 100%;
 
     @include screenXS {
