--- a/src/UI/styles/abstracts/_variables.scss
+++ b/src/UI/styles/abstracts/_variables.scss
@@ -1,4 +1,5 @@
 $color-primary: blue;
+$color: #ff9900;
 
 $font-tektur: "Tektur", sans-serif;
 $font-montserrat: "Montserrat Alternates", sans-serif;
