--- a/src/UI/containers/_manifest.scss
+++ b/src/UI/containers/_manifest.scss
@@ -1,1 +1,5 @@
 @import "./GlassForm/glass_form";
+
+@import "./DashboardContainers/UpdateProfile/update_profile";
+@import "./DashboardContainers/Profile/view_profile";
+@import "./DashboardContainers/ChangePassword/change_password";
