--- a/src/UI/styles/styles.scss
+++ b/src/UI/styles/styles.scss
@@ -10,7 +10,7 @@
 @import "base/btn";
 @import "base/scrollbar";
 
-// @import "components";
+@import "components/popup";
 
 // @import "layouts";
 
