--- a/src/UI/pages/DashboardPage/_dashboard_page.scss
+++ b/src/UI/pages/DashboardPage/_dashboard_page.scss
@@ -1,140 +1,237 @@
+// .dashboard {
+//   width: 100%;
+//   display: grid;
+//   grid-template-columns: 36% 64%;
+//   // grid-template-rows: 1fr 3fr;
+//   // gap: 2rem;
+//   height: 100%;
+//   overflow-y: scroll;
+
+//   @include screenXS {
+//     grid-template-columns: 1fr;
+//   }
+//   @include screenS {
+//     grid-template-columns: 1fr;
+//   }
+//   @include screenM {
+//     grid-template-columns: 1fr;
+//   }
+
+//   & > * {
+//     width: 100%;
+//     padding: 1.5rem;
+//     border-radius: 1rem;
+//     @include glassmorph(white, 0.1, 10px);
+//   }
+
+//   &__left {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     gap: 1rem;
+//     // height: 100%;
+//     // width: 100%;
+
+//     // @include screenXS {
+//     //   grid-template-columns: 1fr;
+//     // }
+//     // @include screenS {
+//     //   grid-template-columns: 1fr;
+//     // }
+//   }
+//   &__stats {
+//     display: flex;
+//     flex-direction: column;
+//     width: 100%;
+//     font-size: 1.4rem;
+//     $color: rgb(43, 255, 0);
+//     & > p {
+//       color: $color;
+//       padding: 0.5rem 1rem 0.5rem 1rem;
+//       border-bottom: 1px solid $color;
+//     }
+//     & > span {
+//       color: $color;
+//       padding: 0.5rem 1rem 0.5rem 1rem;
+//     }
+//   }
+
+//   &__creditcard {
+//     position: relative;
+//     width: 100%;
+//     height: fit-content;
+
+//     @include screenXS {
+//       width: 100%;
+//     }
+
+//     &__btn {
+//       position: absolute;
+//       width: clamp(1rem, 10%, 2rem);
+//       aspect-ratio: 1;
+//       top: 0;
+//       right: 0;
+//       border-radius: 1rem;
+//       background-color: transparent;
+//       display: flex;
+//       justify-content: center;
+//       align-items: center;
+
+//       & > img {
+//         filter: invert(1);
+//       }
+//     }
+//   }
+
+//   &__stats {
+//     width: 100%;
+//     height: 100%;
+//     aspect-ratio: 3.5/2;
+//     overflow: hidden;
+
+//     @include screenXS {
+//       display: none;
+//     }
+//     @include screenS {
+//       display: none;
+//     }
+//     @include screenM {
+//       display: none;
+//     }
+//   }
+
+//   &__apps {
+//     // grid-column: 1/3;
+//     width: 100%;
+
+//     @include screenXS {
+//       grid-column: unset;
+//     }
+//     @include screenS {
+//       grid-column: unset;
+//     }
+//     @include screenM {
+//       grid-column: unset;
+//     }
+//   }
+
+//   &__update {
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     background-color: rgba(255, 255, 255, 0.1);
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: center;
+//     align-items: center;
+//     backdrop-filter: blur(10px);
+
+//     &__btn {
+//       position: fixed;
+//       top: 0;
+//       left: 0;
+//       // padding: 1rem;
+//       width: clamp(3rem, 10vw, 5rem);
+//       aspect-ratio: 1;
+//     }
+//   }
+// }
+
 .dashboard {
-  width: 100%;
+  overflow: hidden;
+  border: 2px solid white;
+
+  border-radius: 1.5rem;
+  @include glassmorphism(
+    $color: rgb(255, 255, 255),
+    $opacity: 0.03,
+    $blur: 50px
+  );
   display: grid;
-  grid-template-columns: 36% 64%;
-  // grid-template-rows: 1fr 3fr;
-  // gap: 2rem;
-  height: 100%;
-  overflow-y: scroll;
+  grid-template-columns: 25% 75%;
 
-  @include screenXS {
-    grid-template-columns: 1fr;
-  }
-  @include screenS {
-    grid-template-columns: 1fr;
-  }
-  @include screenM {
-    grid-template-columns: 1fr;
-  }
-
-  & > * {
-    width: 100%;
-    padding: 1.5rem;
-    border-radius: 1rem;
-    @include glassmorph(white, 0.1, 10px);
+  &__column {
+    // border: 2px solid;
   }
 
   &__left {
+    border-right: 2px solid gray;
+  }
+
+  &__profile {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
-    // height: 100%;
-    // width: 100%;
+    // padding: 2rem;
+    gap: 2rem;
 
-    // @include screenXS {
-    //   grid-template-columns: 1fr;
-    // }
-    // @include screenS {
-    //   grid-template-columns: 1fr;
-    // }
-  }
-  &__stats {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    font-size: 1.4rem;
-    $color: rgb(43, 255, 0);
-    & > p {
-      color: $color;
-      padding: 0.5rem 1rem 0.5rem 1rem;
-      border-bottom: 1px solid $color;
-    }
-    & > span {
-      color: $color;
-      padding: 0.5rem 1rem 0.5rem 1rem;
-    }
-  }
-
-  &__creditcard {
-    position: relative;
-    width: 100%;
-    height: fit-content;
-
-    @include screenXS {
-      width: 100%;
-    }
-
-    &__btn {
-      position: absolute;
-      width: clamp(1rem, 10%, 2rem);
+    &__dp {
+      margin: 2rem;
+      margin-bottom: 0;
+      width: 50%;
+      border: 2px solid;
+      border-radius: 50%;
       aspect-ratio: 1;
-      top: 0;
-      right: 0;
-      border-radius: 1rem;
-      background-color: transparent;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      overflow: hidden;
+    }
 
-      & > img {
-        filter: invert(1);
+    &__stats {
+      // border: 2px solid;
+      width: 100%;
+      display: grid;
+      grid-template-columns: 70% 30%;
+      gap: 2px 0px;
+
+      &__text {
+        padding: 0.75rem 2rem;
+        background-image: linear-gradient(
+          to bottom,
+          transparent,
+          rgba(75, 90, 255, 0.2),
+          transparent
+        );
+
+        color: grey;
+      }
+
+      &__field {
+        text-align: left;
+      }
+
+      &__value {
+        text-align: right;
       }
     }
   }
 
-  &__stats {
+  &__hr {
     width: 100%;
-    height: 100%;
-    aspect-ratio: 3.5/2;
-    overflow: hidden;
-
-    @include screenXS {
-      display: none;
-    }
-    @include screenS {
-      display: none;
-    }
-    @include screenM {
-      display: none;
-    }
+    margin: 1rem 0rem;
+    border: 1px dashed gray;
   }
 
-  &__apps {
-    // grid-column: 1/3;
-    width: 100%;
-
-    @include screenXS {
-      grid-column: unset;
-    }
-    @include screenS {
-      grid-column: unset;
-    }
-    @include screenM {
-      grid-column: unset;
-    }
-  }
-
-  &__update {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.1);
+  &__navlist {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    backdrop-filter: blur(10px);
+    gap: 2px;
 
-    &__btn {
-      position: fixed;
-      top: 0;
-      left: 0;
-      // padding: 1rem;
-      width: clamp(3rem, 10vw, 5rem);
-      aspect-ratio: 1;
+    &__link {
+      width: 100%;
+      height: fit-content;
+    }
+
+    &__item {
+      // background-color: aliceblue;
+      padding: 1rem 2rem;
+      color: white;
+      transition: 0.1s linear;
+
+      &:hover {
+        background-color: rgb(7, 0, 80);
+      }
     }
   }
 }
