--- a/src/UI/styles/abstracts/_mixins.scss
+++ b/src/UI/styles/abstracts/_mixins.scss
@@ -6,3 +6,10 @@
   border-left: 1px solid rgba($color, $alpha * 0.5);
   border-top: 1px solid rgba($color, $alpha * 0.5);
 }
+
+@mixin glassmorphism($color: rgba(255, 255, 255), $blur: 5px, $opacity: 0.01) {
+  background-color: rgba($color, $opacity);
+  backdrop-filter: blur($blur);
+  box-shadow: 0 0px 15px rgba(0, 0, 0, 0.1);
+  border: 1.5px solid rgba($color, $opacity * 2);
+}
