--- a/src/UI/styles/abstracts/_utils.scss
+++ b/src/UI/styles/abstracts/_utils.scss
@@ -1,12 +1,10 @@
 .wrapper {
-  width: 90%;
-  max-width: max(90rem, 75%);
+  --gap: 2rem;
+  width: calc(100% - var(--gap) * 2);
+  height: calc(100% - var(--gap) * 2);
   margin: auto;
-  height: 100%;
-  // backdrop-filter: blur(25px);
 
-  // background-color: rgb(105, 105, 105);
-  padding: clamp(1rem, 5vw, 3rem);
+  // padding: clamp(1rem, 5vw, 3rem);
 }
 
 .row {
@@ -24,4 +22,32 @@
   &--center--y {
     justify-content: center;
   }
+}
+
+.scrollbar {
+  &::-webkit-scrollbar {
+    width: 5px;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: #f1f1f1; // Track color
+    // max-width: 5px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #888; // Thumb color
+    border-radius: 2px; // Round edges
+    // border: 3px solid #f1f1f1; // Padding around thumb
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #555; // Color on hover
+  }
+
+  // Firefox (using scrollbar-width and scrollbar-color)
+  scrollbar-width: thin; // Scrollbar thickness
+  scrollbar-color: #888 #f1f1f1; // Thumb and track colors
 }
