--- a/src/UI/styles/base/_reset.scss
+++ b/src/UI/styles/base/_reset.scss
@@ -35,6 +35,16 @@ img {
   object-position: center;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: #ffffff;
+  transition: background-color 500000s ease-in-out 0s;
+  box-shadow: inset 0 0 20px 20px #23232329;
+}
+
 #root {
   inset: 0 0 0 0;
   position: fixed;
